# NovaDB

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Defensa_roast.md  Némesis_roast.md  architecture.md  audit_mcp_tools.md  audit_novadb.md  demo_script.md  guion_presentacion.md  how_it_works.md  mcp_tools.md  onepager_profe.md  presentacion_profe.html  test_export.md
mind-reader/: MindReader_PRD.md  README.md  api.py
mind-reader/web/src/components/: GraphViewer.jsx
mind-reader/web/src/pages/: index.astro
novadb/: API.md  README.md  __init__.py  novadb.py
novadb-mcp/: README.md  pyproject.toml
novadb-mcp/src/novadb_mcp/: __init__.py  __main__.py  config.py  serializers.py  server.py
novadb-mcp/src/novadb_mcp/tools/: __init__.py  admin.py  contexto.py  memoria.py  sistema.py
novadb-mcp/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
novadb/core/: __init__.py  consolidator.py  embedder.py  graph.py  logging_config.py  node.py  rebalancer.py  search.py
novadb/storage/: __init__.py  backup.py  disk.py  exporter.py
novadb/test/: list_models.py  test_consolidacion.py  test_context.py  test_core.py  test_decay.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_local_embedder.py  test_persistence.py  test_rebalancer.py  test_search.py  test_similitud.py  test_update.py
scripts/: bootstrap_viz.py  migrate_from_md.py
