[project]
name = "novadb"
version = "1.1.0"
description = "Hierarchical Semantic Memory Engine for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "msgpack>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
# Offline embeddings (no API key needed)
local = [
    "sentence-transformers>=2.2.0",
]
# MCP server (connect to AI agents)
mcp = [
    "mcp>=1.0.0",
]
# MindReader visualization backend
viz = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
# Everything
all = [
    "novadb[local,mcp,viz]",
]
# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "novadb[all]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["novadb"]

[tool.uv.workspace]
members = [
    "novadb-mcp",
]

[tool.uv.sources]
novadb-mcp = { workspace = true }
