[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novadb-mcp"
version = "1.0.0"
description = "MCP Server for NovaDB - Universal memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/novadb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
